--- a/package.json
+++ b/package.json
@@ -1,61 +1,61 @@
 {
-    "name": "eplayas",
-    "version": "1.1.166",
-    "license": "MIT",
-    "main": "server.js",
-    "scripts": {
-        "ng": "ng",
-        "serve": "ng serve",
-        "start": "node server.js",
-        "build": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "heroku-run-build-script": true,
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^11.2.8",
-        "@angular/common": "^11.2.8",
-        "@angular/compiler": "^11.2.8",
-        "@angular/compiler-cli": "^11.2.8",
-        "@angular/core": "^11.2.8",
-        "@angular/forms": "^11.2.8",
-        "@angular/platform-browser": "^11.2.8",
-        "@angular/platform-browser-dynamic": "^11.2.8",
-        "@angular/router": "^11.2.8",
-        "body-parser": "^1.19.0",
-        "core-js": "^3.9.1",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.0",
-        "mongodb": "^3.6.5",
-        "rxjs": "^6.6.7",
-        "tslib": "^2.1.0",
-        "typescript": "4.1.5",
-        "zone.js": "^0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1102.7",
-        "@angular/cli": "^11.2.7",
-        "@angular/language-service": "^11.2.8",
-        "@types/jasmine": "^3.6.7",
-        "@types/jasminewd2": "^2.0.6",
-        "@types/node": "^14.14.35",
-        "codelyzer": "^6.0.1",
-        "jasmine-core": "^3.7.1",
-        "jasmine-spec-reporter": "^6.0.0",
-        "karma": "^6.2.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-cli": "^2.0.0",
-        "karma-coverage-istanbul-reporter": "~3.0.2",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "^9.1.1",
-        "tslint": "^6.1.3"
-    },
-    "engines": {
-        "node": "14.16.0",
-        "npm": "6.14.11"
-    }
+  "name": "eplayas",
+  "version": "1.1.167",
+  "license": "MIT",
+  "main": "server.js",
+  "scripts": {
+    "ng": "ng",
+    "serve": "ng serve",
+    "start": "node server.js",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "heroku-run-build-script": true,
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^12.0.0",
+    "@angular/common": "^12.0.0",
+    "@angular/compiler": "^12.0.0",
+    "@angular/compiler-cli": "^12.0.0",
+    "@angular/core": "^12.0.0",
+    "@angular/forms": "^12.0.0",
+    "@angular/platform-browser": "^12.0.0",
+    "@angular/platform-browser-dynamic": "^12.0.0",
+    "@angular/router": "^12.0.0",
+    "body-parser": "^1.19.0",
+    "core-js": "^3.12.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.0",
+    "mongodb": "^3.6.6",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.1.0",
+    "typescript": "4.2.4",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~12.0.0",
+    "@angular/cli": "^12.0.0",
+    "@angular/language-service": "^12.0.0",
+    "@types/jasmine": "^3.7.4",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/node": "^14.14.35",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "protractor": "~7.0.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3"
+  },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "7.8.0"
+  }
 }
