--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.170",
+  "version": "1.1.171",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -29,30 +29,24 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.0",
     "mongodb": "^3.6.9",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.1.0",
-    "typescript": "4.2.4",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.4",
-    "@angular/cli": "^12.1.4",
-    "@angular/language-service": "^12.1.4",
-    "@types/jasmine": "^3.7.4",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^14.14.35",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.7.1",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.3.2",
+    "@angular-devkit/build-angular": "~12.2.0",
+    "@angular/cli": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
+    "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.6.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.3.5"
   },
   "engines": {
     "node": "14.17.4",
