--- a/package.json
+++ b/package.json
@@ -1,55 +1,53 @@
 {
-  "name": "eplayas",
-  "version": "1.1.174",
-  "license": "MIT",
-  "main": "server.js",
-  "scripts": {
-    "ng": "ng",
-    "serve": "ng serve",
-    "start": "node server.js",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "heroku-run-build-script": true,
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^12.1.4",
-    "@angular/common": "^12.1.4",
-    "@angular/compiler": "^12.1.4",
-    "@angular/compiler-cli": "^12.1.4",
-    "@angular/core": "^12.1.4",
-    "@angular/forms": "^12.1.4",
-    "@angular/platform-browser": "^12.1.4",
-    "@angular/platform-browser-dynamic": "^12.1.4",
-    "@angular/router": "^12.1.4",
-    "body-parser": "^1.19.0",
-    "core-js": "^3.12.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.0",
-    "mongodb": "^3.6.9",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "typescript": "~4.3.5",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.4",
-    "@angular/cli": "~12.2.4",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^16.4.13",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
-  },
-  "engines": {
-    "node": "14.17.5",
-    "npm": "7.21.0"
-  }
+    "name": "eplayas",
+    "version": "1.1.175",
+    "license": "MIT",
+    "main": "server.js",
+    "scripts": {
+        "ng": "ng",
+        "serve": "ng serve",
+        "start": "node server.js",
+        "build": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "heroku-run-build-script": true,
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^13.1.1",
+        "@angular/common": "^13.1.1",
+        "@angular/compiler": "^13.1.1",
+        "@angular/compiler-cli": "^13.1.1",
+        "@angular/core": "^13.1.1",
+        "@angular/forms": "^13.1.1",
+        "@angular/platform-browser": "^13.1.1",
+        "@angular/platform-browser-dynamic": "^13.1.1",
+        "@angular/router": "^13.1.1",
+        "body-parser": "^1.19.0",
+        "core-js": "^3.12.1",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.0",
+        "mongodb": "^4.3.0",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.3.0",
+        "typescript": "~4.5.4",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~13.1.2",
+        "@angular/cli": "~13.1.2",
+        "@types/jasmine": "~3.8.0",
+        "@types/node": "^16.4.13",
+        "jasmine-core": "~3.8.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0"
+    },
+    "engines": {
+        "node": "16.13.2",
+        "npm": "8.1.2"
+    }
 }
