--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "heroku-run-build-script": true,
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.12",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
+    "@angular/animations": "^15.0.2",
+    "@angular/common": "^15.0.2",
+    "@angular/compiler": "^15.0.2",
+    "@angular/compiler-cli": "^15.0.2",
+    "@angular/core": "^15.0.2",
+    "@angular/forms": "^15.0.2",
+    "@angular/platform-browser": "^15.0.2",
+    "@angular/platform-browser-dynamic": "^15.0.2",
+    "@angular/router": "^15.0.2",
     "body-parser": "^1.20.0",
     "core-js": "^3.22.7",
     "dotenv": "^10.0.0",
@@ -31,12 +31,12 @@
     "mongodb": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
-    "typescript": "~4.8.4",
-    "zone.js": "~0.11.5"
+    "typescript": "^4.8.4",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
+    "@angular-devkit/build-angular": "^15.0.2",
+    "@angular/cli": "^15.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^16.4.13",
     "jasmine-core": "~3.8.0",
@@ -47,7 +47,7 @@
     "karma-jasmine-html-reporter": "~1.7.0"
   },
   "engines": {
-    "node": "16.15.0",
-    "npm": "8.9.0"
+    "node": "18.12.1",
+    "npm": "8.19.0"
   }
 }
