--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eplayas",
-  "version": "1.1.188",
+  "version": "1.1.189",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "serve": "ng serve",
     "start": "node server.js",
     "build": "ng build --configuration production",
-    "postinstall": "ng build --prod",
+    "heroku-postbuild": "ng build --aot --prod ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
