--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eplayas",
-  "version": "1.1.190",
+  "version": "1.1.191",
   "license": "MIT",
   "main": "server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
     "start": "node server.js",
-    "build": "ng build --configuration production",
+    "build": "ng build --prod",
+    "postinstall": "npm run build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
